--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
         
         <button type="submit">Calculate Price</button>
     </form>
+    <div class="watermark">Created by Dollar AI Club</div>
 </body>
 </html>
