--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
             <option value="1.5">FL (Flawless)</option>
             <option value="1.4">IF (Internally Flawless)</option>
             <option value="1.3">VVS1 (Very Very Slightly Included 1)</option>
-            <option value="1.2">VVS1 (Very Very Slightly Included 1)</option>
-            <option value="1.1">VVS1 (Very Very Slightly Included 1)</option>
+            <option value="1.2">VVS2 (Very Very Slightly Included 1)</option>
         </select><br>
-        
+
         <button type="submit">Calculate Price</button>
+    </br>
+        
     </form>
-    <div class="watermark">Created by Dollar AI Club</div>
+    <label class="required">Created by Dollar AI Club</label>
 </body>
 </html>
